--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,10 +1,26 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
+
+  font-family: ProximaNova, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 15px;
+  font-weight: normal;
+  line-height: 1.5;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, h5, h6, {
+  margin: 0 0 20px 0;
+  font-family: ProximaNova, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-weight: 300;
+  color: #222;
+  text-transform: none;
+}
+
+h1 {
+  font-size: 32.3px;
+  line-height: 1.2;
 }
 
 code {
@@ -12,13 +28,27 @@ code {
   monospace;
 }
 
-
-button::-moz-focus-inner {
-  border: 0;
+.text-center {
+  text-align: center;
 }
 
-:root{
-  --primary:#09505a;
-  --secondary:#2b998a;
-  --warn:#f69217
+.divider {
+  overflow: visible;
+  text-align: inherit;
+  margin: 0;
+
+  border: 0;
+  border-top: 1px solid #e5e5e5;
+}
+
+*::-moz-focus-inner, * {
+  border: 0;
+  outline: none;
+}
+
+
+:root {
+  --primary: #2b998a;
+  --secondary: #09505a;
+  --warn: #f69217
 }
