Show the first bar graph

--- a/client/src/components/facility/facility.scss
+++ b/client/src/components/facility/facility.scss
@@ -1,3 +1,8 @@
-.diagram-outlet {
+.full-height {
+  height: 100%;
+}
 
+.diagram-outlet {
+  margin-top: 1rem;
+  //  TODO fill remaining height
 }
