--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -40,8 +40,11 @@ $left-width: 300px;
 .select-time {
   display: inline-flex;
   justify-content: space-between;
-  margin: 1rem 0;
+  padding: 1rem 0;
+  box-sizing: border-box;
   min-width: 800px;
+  max-width: 100vw;
+  overflow-x: auto;
 }
 
 @media (max-width: 1200px) {
