--- a/client/src/components/sidenav/responsive.scss
+++ b/client/src/components/sidenav/responsive.scss
@@ -1,16 +1,23 @@
 .nav-overlay {
   position: fixed;
-  display: none;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
-  z-index: 50;
+
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
+
   background-color: rgba(0, 0, 0, 0.12);
+
+  opacity: 0;
+  transition: opacity .5s ease-in-out;
 }
 
+.navbar-icon {
+  display: none;
+}
 
-@media (max-width: 2000px) {
+@media (max-width: 900px) {
   .right {
     width: 100%;
   }
@@ -28,7 +35,8 @@
     }
 
     .nav-overlay {
-      animation: fade-in 1s forwards;
+      z-index: 50;
+      opacity: 1;
       display: block;
     }
   }
@@ -40,6 +48,7 @@
   .navbar-icon {
     border: dotted 1px transparent;
 
+    display: block;
     position: fixed;
     padding: 5px;
     cursor: pointer;
@@ -54,18 +63,3 @@
   }
 }
 
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-    display: none;
-  }
-
-  1% {
-    display: block;
-  }
-
-  100% {
-    opacity: 1;
-    display: block;
-  }
-}
