--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -55,6 +55,10 @@ h1, h2, h3, h4, h5, h6, {
   border-top: 1px solid #e5e5e5;
 }
 
+.no-margin-right {
+  margin-right: 0 !important;
+}
+
 // Input
 
 input {
@@ -65,6 +69,8 @@ input {
   height: 30px;
   border: solid var(--secondary) 1px;
 
+  background-color: transparent;
+
   &:focus {
     box-shadow: 0 0 0 .2rem var(--secondary-light-1);
   }
@@ -73,4 +79,42 @@ input {
 // Background
 .app-background {
   background-color: white;
+}
+
+// Custom Select
+.custom-select {
+  font-family: fontello;
+  width: 100%;
+  border-radius: 5px;
+  height: 30px;
+  border: solid var(--secondary) 1px;
+  background: transparent;
+
+  position: relative;
+}
+
+.custom-select::before {
+  position: absolute;
+  content: "";
+  right: 8px;
+  top: 9px;
+
+  transform: rotate(45deg);
+
+  border: solid var(--primary);
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: transparent;
+  outline: none;
 }
