--- a/client/src/components/sidenav/responsive.scss
+++ b/client/src/components/sidenav/responsive.scss
@@ -48,6 +48,7 @@
   .navbar-icon {
     border: dotted 1px transparent;
 
+    font-size: 2rem;
     display: block;
     position: fixed;
     padding: 5px;
