--- a/client/src/components/sidenav/responsive.scss
+++ b/client/src/components/sidenav/responsive.scss
@@ -19,7 +19,7 @@
 
 @media (max-width: 900px) {
   .right {
-    width: 100%;
+    width: 100% !important;
   }
 
   .left {
@@ -48,10 +48,11 @@
   .navbar-icon {
     border: dotted 1px transparent;
 
+    padding: 5px;
+
     font-size: 2rem;
     display: block;
     position: fixed;
-    padding: 5px;
     cursor: pointer;
     top: 0;
     left: 0;
