--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -59,6 +59,14 @@ h1, h2, h3, h4, h5, h6, {
   margin-right: 0 !important;
 }
 
+.no-margin-bottom {
+  margin-bottom: 0 !important;
+}
+
+.no-margin-top {
+  margin-top: 0 !important;
+}
+
 .padding-left-right {
   padding: 0 1rem;
 }
@@ -86,6 +94,8 @@ input {
 
 // Custom Select
 .custom-select {
+  box-sizing: border-box;
+
   font-family: fontello;
   width: 100%;
   border-radius: 5px;
@@ -93,7 +103,25 @@ input {
   border: solid var(--secondary) 1px;
   background: transparent;
 
+
   position: relative;
+
+  &:active {
+    box-shadow: 0 0 0 .2rem var(--secondary-light-1);
+  }
+
+  select {
+    padding-left: .5rem;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: transparent;
+    outline: none;
+  }
 }
 
 .custom-select::before {
@@ -110,17 +138,6 @@ input {
   padding: 3px;
 }
 
-select {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  border: transparent;
-  outline: none;
-}
 
 // Scrollbar
 // Scrollbar
